Changed filenames to be consistent.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
 
   <body>
-    <p><a href="note_test.html">Note names test</a></p>
-    <p><a href="keysig_test.html">Key signatures test</a></p>
+    <p><a href="notename_test.html">Note names test</a></p>
+    <p><a href="keysignature_test.html">Key signatures test</a></p>
     <p><a href="interval_test.html">Intervals test</a> (work in progress)</p>
   </body>
 
